# Machine-Learning-and-AI

./: .gitconfig  .gitignore  .mlflowignore  .viminfo  CPU_TRAINING_GUIDE.md  Project_2 (1).ipynb  Project_2.ipynb  README.md  check_current_training.py  diagnose_training.py  investigate_training.py  model_features.pkl  pyproject.toml  quick_test.py  requirements-deepspeed.txt  requirements-dev.txt  requirements.txt  test_model.py  train_cpu.sh  train_custom.py  train_large_stories.py  train_simple.py  train_with_preset.py
.vim/: .netrwhist
Fruit Classifier/: Untitled2.ipynb
Git-Repo-Tour/: .gitignore
Git-Repo-Tour/Fruit Classifier/: Fruit.ipynb  Sheet1.csv
Git-Repo-Tour/Project_1/: .gitignore
Git-Repo-Tour/Project_2/: Project_2.ipynb
Git-Repo-Tour/Project_3/: Project_3.csv  Project_3.ipynb  knn_purchase_predictor.pkl  scaler.pkl
Git-Repo-Tour/Project_4/: Project_4.ipynb  logistic_model.joblib  tfidf_vectorizer.joblib
Git-Repo-Tour/Project_5/: Project_5.ipynb
Git-Repo-Tour/Project_6/: Project_6.ipynb  Untitled.ipynb  tetoris.py
Project_1/: Project_1.ipynb
Project_2/: Project_2.ipynb
Project_2/.ipynb_checkpoints/: Project_2-checkpoint.ipynb
Project_3/: Project_3.ipynb
Project_5/: Project_5.ipynb
configs/: README.md  base_model.yaml  fast_train.yaml  gpt2_small.yaml  min_model.yaml  moe_model.yaml  tiny_test.yaml  ultra_tiny.yaml
docs/: MLflow.md  QUICKSTART.md
notebooks/: 01_data_preparation.ipynb  02_understanding_transformers.ipynb  03_building_moe.ipynb  04_training_basics.ipynb  05_full_training_and_inference.ipynb  README.md
scripts/: test_device_compatibility.py
tools/: start_mlflow.sh  train_fast.sh
(+33 files in other folders)
